trunk/Archive2/ae/8c586afa75d329/output
main.cpp:65:48: error: function template partial specialization 'print_stuff<NumberSequence<Numbers ...> >' is not allowed
 void print_stuff<NumberSequence<Numbers...> >( )
                                                ^
main.cpp: In function 'void print_stuff()':
main.cpp:67:26: error: expected ';' before '...' token
     print_number(Numbers)...;
                          ^
main.cpp:67:29: error: parameter packs not expanded with '...':
     print_number(Numbers)...;
                             ^
main.cpp:67:29: note:         'Numbers'
main.cpp: In function 'int main()':
main.cpp:72:35: warning: unused variable 'bob' [-Wunused-variable]
     GenerateFullNumberSequence<5> bob;
                                   ^
